--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "antd": "^2.13.9",
+    "async": "^2.6.0",
+    "axios": "^0.17.1",
     "babel-plugin-import": "^1.6.2",
     "babel-runtime": "^6.9.2",
     "dva": "^2.0.4",
     "react": "^15.4.0",
-    "react-dom": "^15.4.0"
+    "react-dom": "^15.4.0",
+    "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
